# rust-knight

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  coverage.yml
core/src/: board.rs  lib.rs  main.rs  piece.rs
server/: Cargo.toml
